[metadata]
name = tfsm00-risk-tools
version = 0.0.1
author = Tiago Moreira
author_email = tiagomoreira317@gmail.com
description = A package with finance and risk-related utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TFSM00/tfsm00-risk-tools

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12

[options.packages.find]
where = src
